--- a/app/www/css/index.css
+++ b/app/www/css/index.css
@@ -25,23 +25,12 @@ body {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#E4E4E4;
-    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
-    background-image:-webkit-gradient(
-        linear,
-        left top,
-        left bottom,
-        color-stop(0, #A7A7A7),
-        color-stop(0.51, #E4E4E4)
-    );
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
     margin:0px;
     padding:0px;
-    text-transform:uppercase;
     width:100%;
 }
 
@@ -112,4 +101,53 @@ h1 {
 .blink {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
+}
+
+.content {
+    color: black ;
+}
+
+.content h2 {
+    padding-left: 30px
+}
+
+.cards ul li {
+    border: 3px solid #888;
+    border-radius: 10px;  
+    width: 71%;
+    margin: auto;
+    margin-bottom: 50px;
+    min-height: 400px;
+}
+
+.reg-button{
+    font-size: 60px;
+}
+
+.reg-button span {
+    border-radius: 20px;
+}
+
+.like-button {
+    color: red;
+    text-align:left;
+}
+
+.pass-button {
+    color: blue;
+    text-align:right;
+}
+
+.like-message {
+    padding-top: 180px;
+    color: red;
+    font-size: 30px;
+}
+.pass-message {
+    padding-top: 180px;
+    color: blue;
+    font-size: 30px;
+}
+.people {
+    padding: 30px;
 }
